--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -41,6 +41,8 @@
     <string name="keep_dm_verity">Mantener dm-verity</string>
     <string name="current_magisk_title">Versión de Magisk instalada: %1$s</string>
     <string name="install_magisk_title">Última versión de Magisk: %1$s</string>
+    <string name="reinstall">Re-Instalar</string>
+    <string name="update">Actualización</string>
     <string name="uninstall">Desinstalar</string>
     <string name="reboot_countdown">Reiniciando en %1$d</string>
 
