--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -55,6 +55,8 @@
     <string name="uninstall_magisk_title">Avinstallera Magisk</string>
     <string name="uninstall_magisk_msg">Detta kommer att ta bort alla moduler, MagiskSU, och potentiellt kryptera din data om inte krypterad\nÄr det säker du vill fortsätta?</string>
     <string name="version_none">(Inga)</string>
+    <string name="reinstall">Installera om</string>
+    <string name="update">Uppdatera</string>
 
     <!--Module Fragment-->
     <string name="no_info_provided">(Ingen information tillhandahållen)</string>
