--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -52,6 +52,8 @@
     <string name="uninstall_magisk_title">Magisk deïnstalleren</string>
     <string name="uninstall_magisk_msg">Dit verwijdert alle modules, MagiskSU, en versleutelt mogelijk alle niet-versleutelde data\nZeker weten voortzetten?</string>
     <string name="version_none">(Geen)</string>
+    <string name="reinstall">Herinstalleren</string>
+    <string name="update">Bijwerken</string>
 
     <!--Module Fragment-->
     <string name="no_info_provided">(Geen info verstrekt)</string>
